# mail

./: .gitignore  .travis.yml  CMakeLists.txt  COPYING.icons  Config.vala.in  HACKING  INSTALL  Makefile.in  README.md  configure  io.elementary.mail.json  io.elementary.mail.yml  meson.build
daemon/: CamelSession.vala  Daemon.vala  meson.build
data/: CMakeLists.txt  ConversationListItem.css  application.css  blank-editor-template.html  blank-message-template.html  daemon.desktop  editor-template.html  geary-attach.contract.in  geary-autostart.desktop.in  geary.appdata.xml  geary.desktop.in  gschemas.compiled  io.elementary.mail-daemon.desktop.in  io.elementary.mail.apparmor  io.elementary.mail.appdata.xml.in  io.elementary.mail.attach  io.elementary.mail.attach.contract  io.elementary.mail.desktop.in  io.elementary.mail.desktop.in.in  io.elementary.mail.gresource.xml  io.elementary.mail.gschema.xml  mail-attach  mail-attach.contract  mail-attach.contract.in  mail.metainfo.xml.in  meson.build  org.pantheon.mail.appdata.xml.in  org.pantheon.mail.desktop.in.in  org.pantheon.mail.gschema.xml  org.yorba.geary.gschema.xml  pantheon-mail-autostart.desktop.in  pantheon-mail-autostart.desktop.in.in  pantheon-mail.appdata.xml  pantheon-mail.application  pantheon-mail.desktop.in  pantheon-mail.desktop.in.in
data/io.elementary.mail-daemon-autostart/: io.elementary.mail-daemon-autostart.desktop.in  meson.build
data/io.elementary.mail-daemon-notifications/: io.elementary.mail-daemon-notifications.desktop.in  meson.build
data/sql/: mail-sql.gresource.xml
data/theming/: CMakeLists.txt  message-viewer.css
data/ui/: CMakeLists.txt  account_spinner.ui  app_menu.interface  composer.ui  context_empty_menu.ui  find_bar.glade  login.ui  pantheon-mail.gresource.xml  preferences.glade  remove_confirm.ui  toolbar_mark_menu.ui  upgrade_dialog.ui
docs/: meson.build
icons/: CMakeLists.txt
src/: Application.vala  AsyncMutex.vala  CMakeLists.txt  Composer.vala  EditorToolbar.vala  HeaderBar.vala  InboxMonitor.vala  MainWindow.vala  StoreMonitor.vala  Translations.vala  Utils.vala  WebView.vala  WebViewServer.vala  WelcomeView.vala  meson.build
src/Backend/: Account.vala  ContactManager.vala  MoveHandler.vala  MoveOperation.vala  Session.vala  TrashHandler.vala
src/Composer/: AbstractComposerActions.vala  CellRendererAvatar.vala  ComposerActions.vala  ComposerHeaderBar.vala  ComposerWidget.vala  ComposerWindow.vala  ComposerWindowActions.vala  InlineComposer.vala  InlineComposerActions.vala
src/ConversationList/: ConversationItemModel.vala  ConversationItemRenderer.vala  ConversationList.vala  ConversationListBox.vala  ConversationListItem.vala  ConversationListStore.vala  ConversationTreeView.vala
src/Dialogs/: InsertLinkDialog.vala  OpenAttachmentDialog.vala  SignatureDialog.vala
src/Dialogs/AliasDialog/: Alias.vala  AliasDialog.vala
src/Dialogs/SignatureDialog/: Signature.vala  SignatureDialog.vala
src/FolderList/: AccountItemModel.vala  FolderItemModel.vala  FolderList.vala  FolderListItem.vala  GroupedFolderItemModel.vala  SessionItemModel.vala
src/FoldersView/: AccountSavedState.vala  AccountSourceItem.vala  FolderInfo.vala  FolderSourceItem.vala  FoldersListView.vala  GroupedFolderSourceItem.vala  SessionSourceItem.vala
src/MessageList/: AttachmentBar.vala  AttachmentButton.vala  AttachmentDialog.vala  GravatarIcon.vala  MessageList.vala  MessageListBox.vala  MessageListItem.vala
src/MessageList/FolderPopover/: FolderPopover.vala  FolderRow.vala
src/SourceList/: CellRendererBadge.vala  CellRendererExpander.vala  SourceList.vala
src/VirtualizingListBox/: VirtualizingListBox.vala  VirtualizingListBoxModel.vala  VirtualizingListBoxRow.vala
src/client/accounts/: AccountDialogRemoveConfirmPane.vala  account-dialog-account-list-pane.vala  account-dialog-edit-alternate-emails-pane.vala  account-dialog-remove-confirm-pane.vala  account-dialog-remove-fail-pane.vala  account-dialog.vala  account-spinner-page.vala  add-edit-page.vala  login-dialog.vala
src/client/application/: autostart-manager.vala  geary-application.vala  geary-args.vala  geary-config.vala  geary-controller.vala  secret-mediator.vala
src/client/components/: conversation-find-bar.vala  count-badge.vala  icon-factory.vala  main-toolbar.vala  main-window.vala  pill-toolbar.vala  status-bar.vala  stock.vala  stylish-webview.vala
src/client/composer/: ComposerCard.vala  ComposerHeaderBar.vala  ComposerToolbar.vala  composer-box.vala  composer-container.vala  composer-embed.vala  composer-headerbar.vala  composer-toolbar.vala  composer-widget.vala  composer-window.vala
src/client/conversation-list/: conversation-list-store.vala  conversation-list-view.vala  formatted-conversation-data.vala
src/client/conversation-viewer/: AttachmentWidget.vala  ConversationFindBar.vala  ConversationWidget.vala  conversation-viewer.vala  conversation-web-view.vala
src/client/dialogs/: AskToOpenDialog.vala  OpenAttachmentDialog.vala  PasswordDialog.vala  attachment-dialog.vala  certificate-warning-dialog.vala  password-dialog.vala  preferences-dialog.vala  upgrade-dialog.vala
src/client/folder-list/: folder-list-account-branch.vala  folder-list-folder-entry.vala
src/client/notification/: libmessagingmenu.vala  libnotify.vala  new-messages-indicator.vala  unity-launcher.vala
src/client/sidebar/: sidebar-common.vala  sidebar-tree.vala
src/client/util/: util-date.vala  util-gravatar.vala  util-gtk.vala
src/console/: main.vala
src/engine/api/: OnlineAccountsWrapper.vala  geary-account-information.vala  geary-composed-email.vala
src/engine/app/: app-conversation-monitor.vala
src/engine/db/: db-connection.vala  db-transaction-async-job.vala  db-versioned-database.vala
src/engine/imap-db/: imap-db-account.vala  imap-db-attachment.vala  imap-db-database.vala  imap-db-folder.vala  imap-db-message-row.vala
src/engine/imap-engine/: imap-engine-account-synchronizer.vala  imap-engine-email-prefetcher.vala  imap-engine-generic-account.vala  imap-engine-minimal-folder.vala
src/engine/rfc822/: rfc822-message.vala  (+3 more)
(+300 files in other folders)
