vala_files = files(
    'Application.vala',
    'Composer.vala',
    'MainWindow.vala',
    'InboxMonitor.vala',
    'Utils.vala',
    'WebView.vala',
    'WelcomeView.vala',
    'Backend/Account.vala',
    'Backend/ContactManager.vala',
    'Backend/Session.vala',
    'Backend/MoveHandler.vala',
    'ConversationList/ConversationItemModel.vala',
    'ConversationList/ConversationList.vala',
    'ConversationList/ConversationListItem.vala',
    'ConversationList/ConversationListStore.vala',
    'Dialogs/InsertLinkDialog.vala',
    'Dialogs/SignatureDialog.vala',
    'FoldersView/AccountSavedState.vala',
    'FoldersView/AccountSourceItem.vala',
    'FoldersView/FoldersListView.vala',
    'FoldersView/FolderSourceItem.vala',
    'FoldersView/GroupedFolderSourceItem.vala',
    'FoldersView/SessionSourceItem.vala',
    'MessageList/AttachmentButton.vala',
    'MessageList/MessageList.vala',
    'MessageList/MessageListItem.vala',
    'SourceList/CellRendererBadge.vala',
    'SourceList/CellRendererExpander.vala',
    'SourceList/SourceList.vala',
    'VirtualizingListBox/VirtualizingListBoxModel.vala',
    'VirtualizingListBox/VirtualizingListBoxRow.vala',
    'VirtualizingListBox/VirtualizingListBox.vala'
)

executable(
    meson.project_name(),
    vala_files,
    config_file,
    asresources,
    dependencies: dependencies,
    c_args: '-DWEBKIT_EXTENSION_PATH="' + webkit2_extension_path + '"',
    install: true
)
