set(UI_DEST share/${CMAKE_PROJECT_NAME}/ui)

install(FILES accelerators.ui DESTINATION ${UI_DEST})
install(FILES account_list.ui DESTINATION ${UI_DEST})
install(FILES account_cannot_remove.ui DESTINATION ${UI_DEST})
install(FILES account_spinner.ui DESTINATION ${UI_DEST})
install(FILES app_menu.interface DESTINATION ${UI_DEST})
install(FILES certificate_warning_dialog.ui DESTINATION ${UI_DEST})
install(FILES composer.ui DESTINATION ${UI_DEST})
install(FILES composer_accelerators.ui DESTINATION ${UI_DEST})
install(FILES edit_alternate_emails.ui DESTINATION ${UI_DEST})
install(FILES find_bar.ui DESTINATION ${UI_DEST})
install(FILES login.ui DESTINATION ${UI_DEST})
install(FILES message.ui DESTINATION ${UI_DEST})
install(FILES remove_confirm.ui DESTINATION ${UI_DEST})
install(FILES context_empty_menu.ui DESTINATION ${UI_DEST})
install(FILES toolbar_mark_menu.ui DESTINATION ${UI_DEST})
install(FILES upgrade_dialog.ui DESTINATION ${UI_DEST})
